new components login, dashboard add and spinner add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>GBoard</h1>
+<app-header>
+</app-header>
+
+<spinner backgroundColor="#1a5ea2" spinner="sk-cube-grid"></spinner>
 
 <router-outlet></router-outlet>
