login page content add

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,12 +3,12 @@
 }
 
 .bg-light {
-  background-color: #1a5ea2  !important;
+  background-color: #20dbfc  !important;
 }
 
 .home-icon{
   font-size: 20px;
-  color: #fff;
+  color: #074284;
   font-weight: 500;
   cursor: pointer;
 }
