--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-  <div routerLink="/search" class="home-icon">
+  <div routerLink="/login" class="home-icon">
     <i class="fas fa-home"></i>
     <span>GBoard</span>
   </div>
