login and api service test add

--- a/src/client/app/components/header/header.component.html
+++ b/src/client/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <div routerLink="/login" class="home-icon">
     <i class="fas fa-home"></i>
-    <span>GBoard New</span>
+    <span>GBoard</span>
   </div>
 </nav>
