--- a/src/client/app/components/login/login.component.scss
+++ b/src/client/app/components/login/login.component.scss
@@ -134,3 +134,11 @@ animation-fill-mode: both;
 -webkit-animation-name: fadeInUp;
 animation-name: fadeInUp;
 }
+
+.float-left{
+  margin-left: -10px;
+}
+
+.float-right{
+  margin-right: -10px;
+}
